--- a/index.html
+++ b/index.html
@@ -5,13 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project: Recipes</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <ul>
-        <li><a href="recipes/lasagna.html" target="_blank">Lasagna</a></li>
-        <li><a href="recipes/lasagna.html" target="_blank">Lasagna</a></li>
-        <li><a href="recipes/lasagna.html" target="_blank">Lasagna</a></li>
-    </ul>
+    <section class="recipes">
+        <h1>Odin Recipes</h1>
+        <ul>
+            <li><a href="recipes/lasagna.html" target="_blank">Lasagna</a></li>
+            <li><a href="recipes/lasagna.html" target="_blank">Lasagna</a></li>
+            <li><a href="recipes/lasagna.html" target="_blank">Lasagna</a></li>
+        </ul>
+    </section>
+   
 </body>
 </html>
