--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Lasagna</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Lasagna</h1>
@@ -23,13 +24,13 @@
         <li>Egg</li>
     </ul>
     <h2>Steps</h2>
-    <ul>
+    <ol>
         <li>Make the meat sauce.</li>
         <li>Cook the noodles.</li>
         <li>Make the ricotta mixture.</li>
         <li>Layer the lasagna according to the recipe instructions.</li>
         <li>Cover with foil and bake.</li>
         <li>Let the lasagna rest before serving.</li>
-    </ul>
+    </ol>
 </body>
 </html>
